client/src/index.scss
:root {
   --primary-color: #ec5252;
   --font-color: #505763;
   --font-color-dark: #29303b;
   --link-color: #009688;
   --link-color-dark: #007791;
   --card-border: solid 1px #dcdacb;
   --card-shadow: 0 0 1px 1px rgba(20, 23, 28, 0.1), 0 3px 1px 0 rgba(20, 23, 28, 0.1);
}

*,
*::after,
*::before {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
}

body,
#root {
   font-size: 15px;
   color: #29303b;
   margin: 0;
   width: 100vw;
   line-height: 1.43;
   font-family: "Open Sans", sans-serif;
   // font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
   //    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
}

.icon--star {
   font-size: 13.07px;
   color: #f4c150;
}
.icon-currency {
   height: 17px;
   width: 15px;
   font-size: 13.07px;
   color: #009688;
}
.loader {
   position: absolute;
   top: 50%;
   right: 50%;
   transform: translate(-50%, -50%);
}

